--- a/app/views/posts/_post.haml
+++ b/app/views/posts/_post.haml
@@ -1,5 +1,5 @@
 .post
   .title= link_to post.title, url_for(:posts, :show, id: post)
-  .date= time_age_in_words(post.created_at || Time.now) + ' ago'
+  .date= time_ago_in_words(post.created_at || Time.now) + ' ago'
   .body= simple_format(post.body)
 
